# platformer-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
docs/: PLAN.md  RENDERING.md
main/: main.cpp
res/: brdfmap.frag  cubemapPass.frag  cubemapPass.vert  normal.frag  normal.vert  phong.frag  phong.vert  quad.frag  quad.vert  skybox.frag  skybox.vert  skyboxgen.frag  skyboxgen.vert  skyboxgen_equirectangluar.frag  skyboxgen_equirectangular.frag  skyboxgen_pbr.frag  texturePass.frag
res/models/: armature.glb  luna14.glb
res/shader/: gizmo.frag  gizmo.vert  light.glsl  pbr.glsl  pipeline.glsl  standard.vert  standardInstanced.vert
src/: application.cpp  application.hpp  debug.hpp  debug_ui.cpp  debug_ui.hpp  entity.hpp  file.cpp  file.hpp  game.cpp  game.hpp  main.cpp  mesh.cpp  mesh.hpp  movement.cpp  movement.hpp  name.cpp  name.hpp  physics.cpp  physics.hpp  profiler.hpp  renderer.cpp  renderer.hpp  transform.cpp  transform.hpp
src/animation/: animation.cpp  animation.hpp
src/geometry/: geometry.cpp  geometry.hpp
src/gizmo/: gizmo.cpp  gizmo.hpp
src/loader/: load.cpp  load.hpp
src/material/: material.cpp  material.hpp
src/pbr/: pbr.cpp  pbr.hpp
src/physics/: movement.cpp  movement.hpp  physics.cpp  physics.hpp
src/render/: armature.cpp  armature.hpp  buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  cubemap.cpp  cubemap.hpp  drawcall.hpp  framebuffer.cpp  framebuffer.hpp  geometry.cpp  geometry.hpp  gizmo.cpp  gizmo.hpp  gl_renderer.cpp  gl_renderer.hpp  light.cpp  light.hpp  load.cpp  load.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  pbr.cpp  pbr.hpp  pipeline.cpp  pipeline.hpp  render.cpp  render.hpp  render_state.cpp  render_state.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  shader_preprocessor.cpp  shader_preprocessor.hpp  texture.cpp  (+3 more)
src/scene/: scene.cpp  scene.hpp  scene_armature.cpp  scene_armature.hpp  scene_bunchoftest.cpp  scene_bunchoftest.hpp  scene_ibl.cpp  scene_ibl.hpp  scene_instancing.cpp  scene_instancing.hpp
src/scenegraph/: armature.cpp  camera.cpp  camera.hpp  light.cpp  light.hpp  mesh.cpp  mesh.hpp  name.cpp  transform.cpp  transform.hpp
src/ui/: debug_ui.cpp  debug_ui.hpp
src/util/: debug.hpp  file.cpp
test/: game.cpp  transform.cpp
